# demanda_en_retail_proyecto_final

./: .dockerignore  .gitignore  README.md  TODO.md  main.py  pyproject.toml
app/: Dockerfile  data_loader.py  db.py  requirements.txt  streamlit_app.py
app/views/: bi.py  finanzas.py  general.py  operativa.py  planeacion.py
artifacts/models/: feature_cols.json  model.joblib  train_report.json
data/: dummy_feedback.csv  dummy_finanzas.csv  dummy_sales.csv
data/predictions/: predictions.parquet
diagramas/: erd.drawio
docs/: reporte.md
etl/: load_metrics.py  load_predictions.py  northwind_etl_referencia.py  rds_to_s3_glue.py  schema.sql
infra/cloudformation/: ecs.yaml  main.yaml  rds.yaml
infra/scripts/: build_and_push.sh
src/inference/: Dockerfile  __main__.py  inference.py
src/inference/test/: test_inference.py
src/preprocessing/: Dockerfile  __main__.py  prep.py
src/preprocessing/test/: test_prep.py
src/training/: Dockerfile  __main__.py  train.py
src/training/test/: test_train.py
src/utils/: input_output.py  logging_config.py
