[project]
name = "demanda-en-retail-proyecto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "streamlit>=1.56.0",
    "psycopg2-binary>=2.9.0",   # conexión a PostgreSQL
    "boto3>=1.26.0",            # Secrets Manager + S3
    "joblib>=1.3.0",            # cargar model.joblib
    "scikit-learn==1.8.0",      # versión exacta del modelo entrenado
]
